fully recovered / images added / preview image replaced / publication dates amended

--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -164,6 +164,10 @@
 			opacity: 0.6;
 		}
 
+		.card_single .card__image {
+			transform: scale(1.1);
+		}
+
 		.card_single {
 			margin-left: 25%;
 		}
@@ -540,8 +544,8 @@
 						Сложил орудие и латы,<br>
 						Похоже, это мой последний бой…</p>
 				</div>
-				<div id="bill-pro-grognostic" data-title="Быль / Предсказание"
-					data-publication-date="XXX / VI / MMXVIII" class="card">
+				<div id="bill-pro-gnostic" data-title="Быль / Предсказание" data-publication-date="XXX / VI / MMXVIII"
+					class="card">
 					<p>ПравИло бесконечности<br>
 						Телит все пуще.<br>
 						Привык быть рабом <br>
@@ -605,7 +609,7 @@
 						Как только откроет уста,<br>
 						Что прекрасно лишь ее отражение.</p>
 				</div>
-				<div id="corn-net" data-title="Корнет" data-publication-date="— / — / ~MMXVIII" class="card">
+				<div id="corn-net" data-title="Корнет" data-publication-date="XXVII / IV / MMXVIII" class="card">
 					<p>Ты готова вкусить мои губы ?<br>
 						Я готов раскусить для тебя.<br>
 						Одна из многих причуд -<br>
@@ -617,9 +621,251 @@
 						Достаточно ! Познал я мир:<br>
 						Старость — спутница, трость и скамья.</p>
 				</div>
+				<div id="bez-mumie" data-title="Безумие" data-publication-date="XXV / IV / MMXVIII" class="card">
+					<p>Пошел третий час ночи-<br>
+						Мозг не спит:<br>
+						Идеи,образы,мысли — это все, чем он кровоточит.<br>
+						Я ныряю в океан чувств,<br>
+						Чтобы явить миру жемчуг.<br>
+						Словно смерть, я ставлю точку.<br>
+						Я — фокусник, и следующим исчезнет продолжение…</p>
+					<p>Не страшно слышать чужие голоса:<br>
+						Ужасно, когда в расположении у них твои уста;<br>
+						Стало подёргивать при множестве очей,<br>
+						Похоже, кукловод больше не покидает нитей.<br>
+						Как день окутанный туманом,<br>
+						Так бытие переплетается со сном.<br>
+						Фантазия, под темным покрывалом,<br>
+						Романы строчит, как слепо влюбившийся стажер.<br>
+						Айсберг потопил Титаник всех моих мечтаний,<br>
+						И, стало быть, реальностью зовется он.<br>
+						Как Око Хоруса, взимаю всех, кто рядом.<br>
+						Знай проклят ты со дня как был рожден.</p>
+
+				</div>
+				<div id="bleedin" data-title="Прометей" data-publication-date="XXV / IV / MMXVIII" class="card">
+					<p>Ты — наказание моё<br>
+						За противоречие взглядов.<br>
+						Расплата за вечный недуг — любовь глазами.<br>
+						Кара, уподобившись ворону, плоть истязает.<br>
+						А мне не в первой —<br>
+						Vis vitalis на запасы чернила меняю.<br>
+						Твержу, как тот прокаженный, судьбу проклиная,<br>
+						Уж лучше бы всем, начиная с Адама, оставаться слепцами !</p>
+				</div>
+				<div id="ya" data-title="Идиллия" data-publication-date="XXII / IV / MMXVIII" class="card">
+					<p>Я всегда лелеял возможность-<br>
+						Украдкой податься в избу.<br>
+						Среди леса терять всякий след.<br>
+						Не пугаясь, довериться старому мху.<br>
+						Впитать аромат дивных трав, едких ягод,<br>
+						Позабыть про всякий недуг.<br>
+						Встречать в полнолуние гостью,<br>
+						Приводящую всех серых в испуг.<br>
+						Трепетать от скрежета веток,<br>
+						Так бурно стучащих в грозу.<br>
+						Впитать все тепло на поляне.<br>
+						Купаться в росе поутру.<br>
+						Проводить стаю птиц на закате,<br>
+						Проводить больше время с пером.<br>
+						Укутаться в плед — холодает.<br>
+						Вспомнить всех, кого я люблю.</p>
+				</div>
+				<div id="past" data-title="Pastырь" data-publication-date="XXI / IV / MMXVIII" class="card">
+					<p>Вернись, то время,<br>
+						Когда чужды были законы.<br>
+						Когда любовь была без права нападать.<br>
+						Когда не понимал<br>
+						Чем был отец взволнован,<br>
+						За что переживала мать.<br>
+						Я был любим в кругу,<br>
+						Ушло на дно то чувство.<br>
+						Кто бросит круг и кинется меня спасать ?!<br>
+						Верни то время, когда хватало друга,<br>
+						Когда стать старше не переставал мечтать.</p>
+				</div>
+				<div id="1-1" data-title="Друг" data-publication-date="XXI / IV / MMXVIII" class="card">
+					<p>Далеко ли я ушел от тебя ?!<br>
+						Не забыл ты меня, мой друг детства ?<br>
+						Все та же знакомая в прятки игра,<br>
+						Правда, расстояния уже километры.<br>
+						Я не думал, что жизнь — то меж нами стена,<br>
+						Где прошлое по ту сторону стенки.<br>
+						Кто же знал, строя бункер в сарае отца,<br>
+						О нашей дружбе не сложат легенды.<br>
+						Тогда считал мир — удел слабака.<br>
+						Мир явил слабака в день рождения.</p>
+				</div>
+				<div id="10vs" data-title="Поэт" data-publication-date="XIX / IV / MMXVIII" class="card">
+					<p>Нет такой профессии — поэт,<br>
+						И занятие, пожалуй, позабыто.<br>
+						От того я продолжаю дальше узнавать,<br>
+						Что есть тот камень, что прибьет на дно пучины.<br>
+						И больно мне до глубины души<br>
+						Не от клейма, что стынет на затылке.<br>
+						За птицу, что мечтает солнышка достичь,<br>
+						Но медля иссякает в грудной клетке.</p>
+					<p>Бедность — верный пес поводырь.<br>
+						Я — семя, хранившееся пылью.<br>
+						Говоря на языке аллегорий,<br>
+						Дыра рождает миры.<br>
+						Почему же свет обошел тебя мимо ?</p>
+					<p>Мой дух разит изъяны, будь уверен.<br>
+						Устал платить вниманием скудству,<br>
+						Что под ногтями, под ступнями, в человеке.<br>
+						В недостатке, с недостатками умру.</p>
+				</div>
+				<div id="9" data-title="Дефект" data-publication-date="XVIII / IV / MMXVIII" class="card">
+					<p>Бывал я в зоопарке.<br>
+						Приматы словно я.<br>
+						Пера даже не надо:<br>
+						Ум выдают глаза.<br>
+						Вторят как попугаи:<br>
+						О чувствах, о высоком,<br>
+						О жизни, неудачах,<br>
+						Кому как одиноко.<br>
+						На то ведь вы приматы,<br>
+						Живущие за сеткой.<br>
+						Едите, что дадут-<br>
+						Напитки иль десерты.<br>
+						Но все же с вами схожи.<br>
+						Не глупость, не страдания,<br>
+						А человеческие нужды<br>
+						Есть то, что нас венчает.</p>
+				</div>
+				<div id="ae" data-title="ÆTERNITAS" data-publication-date="XVIII / IV / MMXVIII" class="card">
+					<p>Открываю глаза —<br>
+						Кровь хлещет из раны.<br>
+						Слезы сходят за воду,<br>
+						Я не верю глазам.</p>
+					<p>Обитаю в том месте,<br>
+						Где солнце заходит.<br>
+						Оставлял горизонт,<br>
+						чтоб отдать дань богам.</p>
+					<p>Закрываю глаза —<br>
+						Мертвые тянут мне руки.<br>
+						Багаж книг вперемежку,<br>
+						В бутылках вина.<br>
+						Ползу вверх по уступкам,<br>
+						Оставляя те крохи.<br>
+						Пот питает ту землю,<br>
+						Что приемлет дитя.</p>
+				</div>
+				<div id="ra" data-title="Я|R" data-publication-date="XVI / IV / MMXVIII" class="card">
+					<p>Шелкопряды сплели мою душу —<br>
+						Разошлись те пути, что вели караван<br>
+						В позолоченные бездны, просторы…<br>
+						Расселина таинств — заманила вдова.</p>
+					<p>Прикоснувшись к своему отражению,<br>
+						Промелькнул луч историй, легенд.<br>
+						Я стал миражом незабвенным,<br>
+						И вот, в Око Ра я глядел.</p>
+					<p>Ведь мог пожелать раствориться,<br>
+						Обрубив хвост рептилии земной,<br>
+						Но не мог перестать я светиться,<br>
+						Пока ночь всех ведет за собой.</p>
+				</div>
+				<div id="pass-o-doppel" data-title="Пасодобль" data-publication-date="XI / IV / MMXVIII" class="card">
+					<p>Я танцую потемну, пока спит<br>
+						всякий недруг,<br>
+						Не чуя мой праздничный дух.<br>
+						Среди сотни мазков,<br>
+						Не сыщешь движений,<br>
+						Коли взмахи творятся пером.<br>
+						Я танцую потемну, коли есть воображение,<br>
+						И мечтаю, что когда-то усну.</p>
+					<p>Время в паре со мной,<br>
+						Но все также на сцене,<br>
+						И пока я пишу — я веду.<br>
+						Хочется верить — восстану,<br>
+						Но не ведаю точно.<br>
+						Как закончу,<br>
+						Часовщик поведет.</p>
+				</div>
+				<div id="archaizm-molod" data-title="Архаизмолог" data-publication-date="XI / IV / MMXVIII"
+					class="card">
+					<p>Сколько стихов было спалено Венерой,<br>
+						Поэт — архаизмолог.<br>
+						Найдем мы пристанище в красном страничнике,<br>
+						Но, уже в электронном.<br>
+						Не доллар, не евро,<br>
+						не рубль и не гривна,<br>
+						Но вся жизнь на бумаге.<br>
+						Будто бездомный у стенок отеля,<br>
+						Сошлись дух и слабость людская.</p>
+				</div>
+				<div id="is-ida" data-title="Исида 4" data-publication-date="X / IV / MMXVIII" class="card">
+					<p>Скольким стихам сулит обзавестись собственным листом,<br>
+						Но ни единого, по духу с этим, не сыскать.<br>
+						Пусть для меня терялся свет во тьме,<br>
+						Но ты всегда знала где свет,<br>
+						Хоть я противился признать.</p>
+					<p>Что двигало тобой ,<br>
+						Чтобы желанному дарить сей путь ?<br>
+						И чем могу тебя благодарить ?…<br>
+						Любовь — единственный,<br>
+						Пока доступный на вопрос ответ.</p>
+					<p>Порой мне кажется, что никому дано понять,<br>
+						То, в чем я погряз, с улыбкою идя ко дну.<br>
+						И сколько человек, меня готовых отвергать,<br>
+						Я не один, пока есть Ты, которая хранит мой дух.<br>
+						Тебе известно, где дары таю, где кроется недуг,<br>
+						Ни капельки сомненья расплескав,<br>
+						Спугнешь беду, убьешь тоску.</p>
+					<p>Насколько хватит сил меня щитить,<br>
+						Как долго ?<br>
+						Здесь время, к сожалению, творит судьбу.<br>
+						Пока льются лишь слезы,<br>
+						Но и грозы не хватит скоро,<br>
+						Любыми судьбами во мраке голос твой сыщу.</p>
+				</div>
+				<div id="claus-ula" data-title="Ужин / Clausula" data-publication-date="IX / IV / MMXVIII" class="card">
+					<p>Я обычный обыватель иного мира.<br>
+						Ни много ни мало времени было отведено мне,<br>
+						Что на Земле зовется годом.<br>
+						Я видел множество людей,<br>
+						Личнойстей, и бестолково существующих масс.</p>
+					<p>Видел, как из личинки получается нечто неописуемое,<br>
+						Обворожительное, и как быстро его стирает непоколебимый механизм.</p>
+					<p>Видел, как строят будущее, ломая основу.<br>
+						Видел, как ищут счастье,<br>
+						Причиняя другим горе.<br>
+						Видел, как монументы возводят негодным.<br>
+						«Глупости!» – ты скажешь. Я скажу: «Их море».</p>
+					<p>С трудом отмечал гениальность,<br>
+						Граничащую с ненормальностью.<br>
+						Некоторые люди при этом, не скупясь,<br>
+						Роняли мне в след слово «необыкновенность».<br>
+						Оно мне знакомо, пожалуй, как никому другому тут.<br>
+						И как это чувство легко теряется рядом с такими же, как я.</p>
+					<p>Память о прежнем себе — это, пожалуй,<br>
+						Все, что я хотел бы забрать с собой,<br>
+						Перед уходом в темноту.</p>
+					<p>Любовь… Какое маркое чувство…</p>
+				</div>
+				<div id="praey" data-title="Обед/т" data-publication-date="IX / IV / MMXVIII" class="card">
+					<p>Ты не познаешь любви, пока ты видишь.<br>
+						Ты не узнаешь правды, пока ты слышишь.<br>
+						Твоя речь не искренна, хоть и уста открыты.<br>
+						Ты не коснешься истины, пока ты дышишь.</p>
+				</div>
+				<div id="traverza" data-title="Завтрак / Трапеза" data-publication-date="IX / IV / MMXVIII"
+					class="card">
+					<p>Я слышал пение звезд,<br>
+						Где солнце гостило,<br>
+						Земля мостит колыбель.<br>
+						Праздничный дух,<br>
+						До того, как родился,<br>
+						У матери в сердце осел.<br>
+						«Сохрани этот луч», –<br>
+						Робко молвил мне Шепот,<br>
+						И темень встретила свет.<br>
+						Одержимый познанием,<br>
+						Умерев — возродишься,<br>
+						Триединый посланец небес.</p>
+				</div>
 			</div>
 			<div class="articles"></div>
-		</div>
 	</main>
 	<script>
 		"use strict";
@@ -666,7 +912,7 @@
 		document.querySelectorAll('.card').forEach(card => {
 			articles.insertAdjacentHTML('beforeend', masonArticle(card.id, card.innerHTML, card.dataset.publicationDate));
 			card.innerHTML = `
-				<span class="card__image i" style="background-image: url(src/image/preview/${card.id}.svg)"></span>
+				<span class="card__image i" style="background-image: url(src/image/preview/rose.svg)"></span>
 				<span class="card__title">${card.dataset.title}</span>
 			`;
 		});
@@ -758,12 +1004,12 @@
 					const a = document.createElement('a');
 					a.href = window.location.hash.slice(0, -1);
 					a.click();
+
 					history.replaceState(null, null, ' ');
 				}
 				else { // assumed to be main page nav
 					const articleId = hash.slice(1);
-
-					document.querySelector('#' + articleId).click();
+					document.querySelector('#' + articleId)?.click();
 				}
 			}
 		})();
