--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -103,6 +103,7 @@
 			box-shadow: 0px 0px 7px 0px #000;
 			z-index: 1;
 			transition: opacity .5s;
+			overflow: hidden;
 		}
 
 		.content {
@@ -122,7 +123,7 @@
 			overflow-y: auto;
 			scrollbar-width: thin;
 			scrollbar-color: white transparent;
-			padding-right: 18px;
+			padding-right: 20px;
 		}
 
 		.preview.loading,
