--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -412,6 +412,23 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
+				<div id="hugh-man" data-title="Человек ?" data-publication-date="XXXI / V / MMXX" class="card">
+					<p>Я человек - я человек<br>
+						Глаголил он не сомкнув век<br>
+						И вот уж век он враг потех,<br>
+						Чужд он покою горных рек.
+					</p>
+					<p>И нет попыток в чаще лет,<br>
+						Как от побед великих нег,<br>
+						Как без узорок ярких глек -<br>
+						Невнятный образ, лика нет.
+					</p>
+					<p>Я человек - я человек<br>
+						Молвил тресясь и голос блек<br>
+						Не принять вызов русла бед<br>
+						Ведь это жизнь, а, человек ?
+					</p>
+				</div>
 				<div id="nichto" data-title="Ничто" data-publication-date="IV / IV / MMXX" class="card">
 					<p>Мы крутимся быстрей Земли<br>
 						И топчем вовсе не в ритм сердца.<br>
