--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -413,18 +413,18 @@
 						вечности !</p>
 				</div>
 				<div id="hugh-man" data-title="Человек ?" data-publication-date="XXXI / V / MMXX" class="card">
-					<p>Я человек - я человек<br>
+					<p>Я человек - я человек,<br>
 						Глаголил он не сомкнув век<br>
 						И вот уж век он враг потех,<br>
 						Чужд он покою горных рек.
 					</p>
 					<p>И нет попыток в чаще лет,<br>
 						Как от побед великих нег,<br>
-						Как без узорок ярких глек -<br>
+						Как без узоров ярких глек -<br>
 						Невнятный образ, лика нет.
 					</p>
-					<p>Я человек - я человек<br>
-						Молвил тресясь и голос блек<br>
+					<p>Я человек - я человек,<br>
+						Молвил тресясь и голос блек.<br>
 						Не принять вызов русла бед<br>
 						Ведь это жизнь, а, человек ?
 					</p>
