--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -412,6 +412,25 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
+				<div id="dnevnikem" data-title="Днейвник" data-publication-date="XXIV / VI / MMXX" class="card">
+					<p>Бездумность школьная осталась
+						Между страниц в том дневнике,
+						И в переплёте в ком собрались
+						В ком грёзы наши суть ничем
+						Себя явили, также радость -
+						От празднеств, юмора и дней,
+						Что так вскружили нашу память
+						О, как теперь забыть друзей ?!
+						Словно палитра мне досталась,
+						И каждый лист - глоток идей,
+						И мысль алмазом будто стала:
+						Идя не видел больше тень.
+						Лишь тело все тепло пронзало,
+						Дневник обнял сведя плечей.
+						Спасибо Вам, что частью стали
+						Меня, отрадой серых дней !
+					</p>
+				</div>
 				<div id="hugh-man" data-title="Человек ?" data-publication-date="XXXI / V / MMXX" class="card">
 					<p>Я человек - я человек,<br>
 						Глаголил он не сомкнув век<br>
