--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -413,21 +413,21 @@
 						вечности !</p>
 				</div>
 				<div id="dnevnikem" data-title="Днейвник" data-publication-date="XXIV / VI / MMXX" class="card">
-					<p>Бездумность школьная осталась
-						Между страниц в том дневнике,
-						И в переплёте в ком собрались
-						В ком грёзы наши суть ничем
-						Себя явили, также радость -
-						От празднеств, юмора и дней,
-						Что так вскружили нашу память
-						О, как теперь забыть друзей ?!
-						Словно палитра мне досталась,
-						И каждый лист - глоток идей,
-						И мысль алмазом будто стала:
-						Идя не видел больше тень.
-						Лишь тело все тепло пронзало,
-						Дневник обнял сведя плечей.
-						Спасибо Вам, что частью стали
+					<p>Бездумность школьная осталась<br>
+						Между страниц в том дневнике,<br>
+						И в переплёте в ком собрались<br>
+						В ком грёзы наши суть ничем<br>
+						Себя явили, также радость -<br>
+						От празднеств, юмора и дней,<br>
+						Что так вскружили нашу память<br>
+						О, как теперь забыть друзей ?!<br>
+						Словно палитра мне досталась,<br>
+						И каждый лист - глоток идей,<br>
+						И мысль алмазом будто стала:<br>
+						Идя не видел больше тень.<br>
+						Лишь тело все тепло пронзало,<br>
+						Дневник обнял сведя плечей.<br>
+						Спасибо Вам, что частью стали<br>
 						Меня, отрадой серых дней !
 					</p>
 				</div>
