poettomu svetten sagaspher

--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -412,6 +412,80 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
+				<div id="poet-tomu" data-title="Поэттому" data-publication-date="XXVI / VII / MMXX" class="card">
+					<p>Поэт тому нас учит,<br>
+						Что можно без потерь,<br>
+						Не доставая с ножен,<br>
+						Разить клинком людей.
+					</p>
+					<p>Что можно стройным слогом<br>
+						Склонившихся от бед<br>
+						Вновь познакомить с Солнцем,<br>
+						Хранившим свой обет.
+					</p>
+					<p>Что в час весёлый другом<br>
+						Творения могу стать,<br>
+						И, как варенье с мёдом,<br>
+						Жизнь сладкой может стать.
+					</p>
+					<p>Что есть всегда возможность<br>
+						При разном счете лет<br>
+						Быть преданным искусству<br>
+						Поэтому - поэт.
+					</p>
+				</div>
+				<div id="svet-ten" data-title="свеТень" data-publication-date="XXVI / VII / MMXX" class="card">
+					<p>В сени лесной, при свете дня,<br>
+						Траур собрал теней отряд.<br>
+						Их взгляд пронзал картинный луг:<br>
+						Он проводил ревнивых слуг.<br>
+						Ни шум листвы, ни свист ветров<br>
+						Не мог отвлечь их пылкий взор.
+					</p>
+					<p>Пёстрый их лик, словно клинок,<br>
+						Пронзал невинный небосвод.<br>
+						И время больше не летит,<br>
+						А лишь дрейфует, как ледник.
+					</p>
+					<p>И скорбь, и жалость чужда мне<br>
+						Ведь разум мой воспрял в огне.<br>
+						Очи мои, вы вновь свободны<br>
+						От мерзких признаков проворных;<br>
+						От мирских призраков злотворных,<br>
+						Что часто губят юность лет.
+					</p>
+					<p>Впитай, земля, миг искаженный,<br>
+						Рассей иллюзий сонм соромный.<br>
+						И речь искуссно завершив,<br>
+						Лес преждней жизнью вновь зажил.
+					</p>
+				</div>
+				<div id="aga-spher" data-title="сАгасфер" data-publication-date="XXVI / VII / MMXX" class="card">
+					<p>О, Отец, скажи зачем<br>
+						Позволил меня ранить.<br>
+						Не дав возможности зажить<br>
+						Скитаюсь вдоль окраин.<br>
+						Среди семи сфер Агасфер,<br>
+						Что в путь послан Венерой<br>
+						И сколь бы верным не был ей<br>
+						Мой путь устлан из бремен.
+					</p>
+					<p>Синод древнейших, луч малейший<br>
+						Сделай моей явью.<br>
+						Я сын старейшин, лик милейшей<br>
+						Вновь с ничем оставил.<br>
+						И поступь лишь ее теперь мой разум сотрясает.
+					</p>
+					<p>Молю, Владыка грёз сплетений,<br>
+						Дай с тесьмы извлечь мне Мир<br>
+						Из эфимерных увлечений,<br>
+						Тоску способных растворить.<br>
+						И прежде чем я вновь восстану,<br>
+						С плеромы - сущности моей,<br>
+						Вопрос пред старцами поставлю:<br>
+						Как вы способны нас судить ?
+					</p>
+				</div>
 				<div id="dnevnikem" data-title="Днейвник" data-publication-date="XXIV / VI / MMXX" class="card">
 					<p>Бездумность школьная осталась<br>
 						Между страниц в том дневнике,<br>
