--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -424,7 +424,7 @@
 						Хранившим свой обет.
 					</p>
 					<p>Что в час весёлый другом<br>
-						Творения могу стать,<br>
+						Творения могут стать,<br>
 						И, как варенье с мёдом,<br>
 						Жизнь сладкой может стать.
 					</p>
@@ -457,7 +457,7 @@
 					<p>Впитай, земля, миг искаженный,<br>
 						Рассей иллюзий сонм соромный.<br>
 						И речь искуссно завершив,<br>
-						Лес преждней жизнью вновь зажил.
+						Лес прежней жизнью вновь зажил.
 					</p>
 				</div>
 				<div id="aga-spher" data-title="сАгасфер" data-publication-date="XXVI / VII / MMXX" class="card">
@@ -473,11 +473,11 @@
 					<p>Синод древнейших, луч малейший<br>
 						Сделай моей явью.<br>
 						Я сын старейшин, лик милейшей<br>
-						Вновь с ничем оставил.<br>
+						Вновь с ничем оставил...<br>
 						И поступь лишь ее теперь мой разум сотрясает.
 					</p>
 					<p>Молю, Владыка грёз сплетений,<br>
-						Дай с тесьмы извлечь мне Мир<br>
+						Позволь с тесьмы извлечь мне Мир<br>
 						Из эфимерных увлечений,<br>
 						Тоску способных растворить.<br>
 						И прежде чем я вновь восстану,<br>
