--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -415,6 +415,28 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
+				<div id="archit-ector" data-title="Архитектор" data-publication-date="IX / VIII / MMXX" class="card">
+					<p>Из-под лоба глядит неустанно<br>
+						В пучину бездонных идей<br>
+						Обладатель пещеры из камня,<br>
+						Что тревожит умы королей.
+					</p>
+					<p>Свет костра не нашел отражения<br>
+						В его кристальных глазах,<br>
+						И орудуя лишь воображением,<br>
+						Он ваяет природы пейзаж.
+					</p>
+					<p>Только слову дано появиться,<br>
+						В его изумрудном уме,<br>
+						И как им суждено раствориться<br>
+						На его необъятном холсте.
+					</p>
+					<p>Этот оттиск - он свит из печали,<br>
+						С надежды увидеть во сне<br>
+						Караваны несметных желаний<br>
+						Не дающих оставить нас мгле.
+					</p>
+				</div>
 				<div id="poet-tomu" data-title="Поэттому" data-publication-date="XXVI / VII / MMXX" class="card">
 					<p>Поэт тому нас учит,<br>
 						Что можно без потерь,<br>
