--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -573,13 +573,13 @@
 						Вновь коснувшись пальцами дна.<br>
 						Понимаешь, что ты тут не первый:<br>
 						Путь из ракушек - жизнь до тебя.</p>
-					<p>Словно якорь стремиться к пучине,<br>
+					<p>Словно якорь стремится к пучине,<br>
 						Твой крест - это благо Царя.<br>
 						Покидай это лоно всех теней,<br>
 						Покидая забудь про себя.</p>
 					<p>Не туши свой костёр до рассвета,<br>
 						Пусть утопит нас матерь всех - тьма.<br>
-						Понимаешь, что ты не последний,<br>
+						Понимаешь, что ты непоследний,<br>
 						Лицезрея всю прелесть утра.</p>
 				</div>
 				<div id="germ" data-title="Герметика" data-publication-date="II / XII / MMXIX" class="card">
