--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -415,6 +415,31 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
+				<div id="mowi-nemowi" data-title="Мощи Немощи I" data-publication-date="III / XI / MMXX" class="card">
+					<p>Открытие века не сулило мне проблем,<br>
+						Ведь пока лучи солнца не отворят эту дверь,<br>
+						Продолжу путь слоняясь помеж хоровода стелл,<br>
+						Не подавая признаки надежды дурить смерть.
+					</p>
+					<p>О, как давно земля забыла зари след,<br>
+						Но помню как вчера меня на плаху вознес свет,<br>
+						А люд был пуст, словно плато пустыни - я в ней жрец,<br>
+						И сажой ритуалов мне казался пыльный склеп.
+					</p>
+					<p>Обучен мудрости веков, что не гранит -<br>
+						Проклены, тьма, невежество поместье сохранит.<br>
+						Чужды тут сострадание, снисходительство, наш быт<br>
+						Лишен страстей, вернее я без крови жить привык.
+					</p>
+					<p>И как хотел бы я стать смертным, груды книг,<br>
+						Увы, меня в сознании вне времени пленит.<br>
+						Вновь ринувшись к люкарне силуэтом между плит,<br>
+						В момент холодный взгляд к рутинной скверне пригвоздит.
+					</p>
+					<p>В сиюминутном помешательстве хотел справить вам пир,<br>
+						Но на сей раз пусть эпилог таит, что я ...
+					</p>
+				</div>
 				<div id="archit-ector" data-title="Архитектор" data-publication-date="IX / VIII / MMXX" class="card">
 					<p>Из-под лоба глядит неустанно<br>
 						В пучину бездонных идей<br>
