--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -415,7 +415,7 @@
 					<p class="b">Да буду я запечатлен там, где бессильно притяжение, дабы нести стражу у ворот
 						вечности !</p>
 				</div>
-				<div id="mowi-nemowi" data-title="Мощи Немощи I" data-publication-date="III / XI / MMXX" class="card">
+				<div id="mowi-ne-mowi" data-title="Мощи Немощи I" data-publication-date="III / XI / MMXX" class="card">
 					<p>Открытие века не сулило мне проблем,<br>
 						Ведь пока лучи солнца не отворят эту дверь,<br>
 						Продолжу путь слоняясь помеж хоровода стелл,<br>
