Move old folders to archive

--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -5,6 +5,9 @@
 	<title>АРХАИЗМОЛОГ</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Архаизмолог / Archaizmolog">
+	<meta name="keywords" content="Архаизмолог, Archaizmolog, архаизмолог, archaizmolog">
+
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -267,6 +270,12 @@
 			scrollbar-width: thin;
 			scrollbar-color: white transparent;
 			padding-right: 18px;
+		}
+
+		.article__item article-content {
+			max-width: 600px;
+			margin-left: auto;
+			margin-right: auto;
 		}
 
 		.article-footer {
@@ -1052,10 +1061,10 @@
 					<button class="article-header__button article-header__button_type_back">
 					</button>
 					<span class="article-header__title"></span>
-					<button class="article-header__button article-header__button_type_read-aloud"
-						onclick="readAloud(event.target)">
-						<i class="i i-read-aloud"></i>
-					</button>
+<!--					<button class="article-header__button article-header__button_type_read-aloud"-->
+<!--						onclick="readAloud(event.target)">-->
+<!--						<i class="i i-read-aloud"></i>-->
+<!--					</button>-->
 				</div>
 				<div class="article__item article-body">
 					<div class="article__item article-content">
