--- a/archaizmolog/index.html
+++ b/archaizmolog/index.html
@@ -272,7 +272,7 @@
 			padding-right: 18px;
 		}
 
-		.article__item article-content {
+		.article-content {
 			max-width: 600px;
 			margin-left: auto;
 			margin-right: auto;
