--- a/showcase/showpad/app/index.html
+++ b/showcase/showpad/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>Pokemons</title>
-  <base href="/">
+  <base href="https://vslipchenko.github.io/showcase/showpad/app/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
